[gd_scene load_steps=66 format=3 uid="uid://chhsxxwlq64bs"]

[ext_resource type="Script" path="res://Scripts/Enemy/enemy.gd" id="1_4oga8"]
[ext_resource type="Texture2D" uid="uid://diwh8amqgbxwm" path="res://Assets/Sprites/Enemy/enemyfairy1combat.png" id="2_nfrxj"]
[ext_resource type="Script" path="res://Scripts/Enemy/Soundbox.gd" id="2_tetot"]
[ext_resource type="Texture2D" uid="uid://d1jie7bkl52cs" path="res://Assets/Sprites/Enemy/enemyfairy1idle.png" id="2_x4ovc"]
[ext_resource type="Texture2D" uid="uid://dowl7fiy46y20" path="res://Assets/Sprites/Visual effect/EnemySpottedMokou.png" id="4_ekvq8"]
[ext_resource type="Script" path="res://addons/yet_another_behavior_tree/src/Nodes/BTRoot.gd" id="4_vfk6x"]
[ext_resource type="Texture2D" uid="uid://waoduubmh1xn" path="res://Assets/Sprites/Visual effect/MokouStunnedtheEnemyohgodohfuck.png" id="5_44tqv"]
[ext_resource type="Script" path="res://addons/yet_another_behavior_tree/src/Nodes/Composite/BTSelector.gd" id="5_v2t6w"]
[ext_resource type="Script" path="res://addons/yet_another_behavior_tree/src/Nodes/Composite/BTSequence.gd" id="6_662v7"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/SetState.gd" id="7_2j6yi"]
[ext_resource type="Script" path="res://addons/yet_another_behavior_tree/src/Nodes/Leaves/BTActionBlackboardSet.gd" id="7_fj5sb"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/AddToBBoard.gd" id="7_gb1p3"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/RaycastCheck.gd" id="8_6eetk"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/CheckViewbox.gd" id="8_ojp6s"]
[ext_resource type="Script" path="res://addons/yet_another_behavior_tree/src/Nodes/Leaves/BTActionWait.gd" id="9_5l4jl"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/IsProcess.gd" id="9_elgba"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/Attack.gd" id="9_yu6x7"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/SetActorMoveSpeed.gd" id="10_kmp4m"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/MoveToTarget.gd" id="11_ehnue"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/SetActorAttackAnim.gd" id="11_w1ce1"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/IsDesignatedToAlarm.gd" id="11_wmtmj"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/IsNearAlarm.gd" id="12_7afpn"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/IsRunningToAlarm.gd" id="12_jytgo"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/MoveToAlarm.gd" id="12_k26fs"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/ActivateAlarm.gd" id="14_32ief"]
[ext_resource type="Script" path="res://addons/yet_another_behavior_tree/src/Blackboard/BTBlackboard.gd" id="14_s55ac"]
[ext_resource type="Script" path="res://addons/yet_another_behavior_tree/src/Nodes/Decorators/BTSuccess.gd" id="15_7c0gb"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/MoveToInvestigate.gd" id="16_a3i3y"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/SetRunningToAlarm.gd" id="17_1dgpv"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/IsHearingSounds.gd" id="17_d2bvp"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/IsAttackCooldown.gd" id="19_3qyfc"]
[ext_resource type="Script" path="res://addons/yet_another_behavior_tree/src/Nodes/Decorators/BTInverter.gd" id="20_n7e2q"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/SetActorAlertAnim.gd" id="20_skrji"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/CheckTargetDist.gd" id="23_1dqts"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/RemoveAlarmDesignation.gd" id="23_vvyob"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/IsTurnCooldown.gd" id="34_bqx1l"]
[ext_resource type="Script" path="res://Scripts/Enemy/BehaviorTree/TurnRandomly.gd" id="35_1r4h7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oj8rt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pimv7"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ch317"]
radius = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7n0n0"]
size = Vector2(8.86428, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_axfs6"]
atlas = ExtResource("5_44tqv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w4mc"]
atlas = ExtResource("5_44tqv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bo5ya"]
atlas = ExtResource("5_44tqv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_u6xea"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_axfs6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w4mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bo5ya")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="Animation" id="Animation_0h2ai"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_nfrxj")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../StatusSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../StatusSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("..:process_mode")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kwkii"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_nfrxj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../StatusSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../StatusSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_5l0tk"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_nfrxj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..:process_mode")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_nyuy0"]
resource_name = "idle"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_x4ovc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_owy2q"]
resource_name = "move"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 6, 8, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../StatusSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../StatusSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_coylj"]
_data = {
"RESET": SubResource("Animation_0h2ai"),
"attack": SubResource("Animation_kwkii"),
"death": SubResource("Animation_5l0tk"),
"idle": SubResource("Animation_nyuy0"),
"move": SubResource("Animation_owy2q")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_urgjc"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8rl23"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_16mbw"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xyrc2"]
animation = &"move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_34o8p"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_045mt"]
advance_mode = 2
advance_condition = &"moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qw3uh"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6chry"]
advance_mode = 2
advance_condition = &"attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0w8sg"]
advance_mode = 2
advance_condition = &"attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3bt53"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k0rjh"]
advance_mode = 2
advance_condition = &"dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ly7f3"]
advance_mode = 2
advance_condition = &"dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_55r7u"]
advance_mode = 2
advance_condition = &"dead"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_2ift6"]
states/attack/node = SubResource("AnimationNodeAnimation_urgjc")
states/attack/position = Vector2(472, 122)
states/death/node = SubResource("AnimationNodeAnimation_8rl23")
states/death/position = Vector2(732, 115)
states/idle/node = SubResource("AnimationNodeAnimation_16mbw")
states/idle/position = Vector2(305, 38)
states/move/node = SubResource("AnimationNodeAnimation_xyrc2")
states/move/position = Vector2(305, 211)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_34o8p"), "idle", "move", SubResource("AnimationNodeStateMachineTransition_045mt"), "move", "idle", SubResource("AnimationNodeStateMachineTransition_qw3uh"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_6chry"), "move", "attack", SubResource("AnimationNodeStateMachineTransition_0w8sg"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_3bt53"), "idle", "death", SubResource("AnimationNodeStateMachineTransition_k0rjh"), "attack", "death", SubResource("AnimationNodeStateMachineTransition_ly7f3"), "move", "death", SubResource("AnimationNodeStateMachineTransition_55r7u")]

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 19
script = ExtResource("1_4oga8")
walk_speed = 150.0
run_speed = 250.0

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_oj8rt")

[node name="Soundbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
monitorable = false
script = ExtResource("2_tetot")

[node name="Area" type="CollisionShape2D" parent="Soundbox"]
shape = SubResource("CircleShape2D_pimv7")
debug_color = Color(0.945098, 0, 0.596078, 0.419608)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitoring = false

[node name="Shape" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_ch317")
debug_color = Color(0, 0.647059, 0.207843, 0.419608)

[node name="VisionBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisionBox"]
polygon = PackedVector2Array(-28, -26, -28, 26, 300, 84, 300, -84)

[node name="Line2D" type="Line2D" parent="VisionBox"]
points = PackedVector2Array(-28, -26, -28, 26, 300, 84, 300, -84, -28, -26)
width = 2.0

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(18.2245, 0)
scale = Vector2(7.16934, 3.59667)
shape = SubResource("RectangleShape2D_7n0n0")

[node name="AttackDelay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="InvulTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="StunTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="TurnCooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_nfrxj")
hframes = 2
vframes = 4
frame = 7

[node name="StatusSprite" type="Sprite2D" parent="."]
position = Vector2(9, -44)
scale = Vector2(4, 4)
texture = ExtResource("4_ekvq8")
hframes = 3
frame = 1

[node name="EffectSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-2, -37)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_u6xea")
frame_progress = 0.513732

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_coylj")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_2ift6")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/conditions/attacking = false
parameters/conditions/dead = false
parameters/conditions/moving = false

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 70.0
target_desired_distance = 70.0
path_max_distance = 60.0
max_speed = 99999.0

[node name="BTRoot" type="Node" parent="." node_paths=PackedStringArray("blackboard")]
script = ExtResource("4_vfk6x")
actor_path = NodePath("..")
blackboard = NodePath("../BTBlackboard")

[node name="main" type="Node" parent="BTRoot"]
script = ExtResource("5_v2t6w")

[node name="IsProcess" type="Node" parent="BTRoot/main"]
script = ExtResource("9_elgba")

[node name="SetOffAlarm" type="Node" parent="BTRoot/main"]
script = ExtResource("6_662v7")

[node name="IsDesignatedToAlarm" type="Node" parent="BTRoot/main/SetOffAlarm"]
script = ExtResource("11_wmtmj")

[node name="IsRunningToAlarm" type="Node" parent="BTRoot/main/SetOffAlarm"]
script = ExtResource("12_jytgo")

[node name="SetActorMoveSpeed" type="Node" parent="BTRoot/main/SetOffAlarm"]
script = ExtResource("10_kmp4m")
is_run_speed = true

[node name="MoveToAlarm" type="Node" parent="BTRoot/main/SetOffAlarm"]
script = ExtResource("12_k26fs")

[node name="BTSuccess" type="Node" parent="BTRoot/main/SetOffAlarm"]
script = ExtResource("15_7c0gb")

[node name="BTSequence" type="Node" parent="BTRoot/main/SetOffAlarm/BTSuccess"]
script = ExtResource("6_662v7")

[node name="IsNearAlarm" type="Node" parent="BTRoot/main/SetOffAlarm/BTSuccess/BTSequence"]
script = ExtResource("12_7afpn")

[node name="ActivateAlarm" type="Node" parent="BTRoot/main/SetOffAlarm/BTSuccess/BTSequence"]
script = ExtResource("14_32ief")

[node name="RemoveAlarmDesignation" type="Node" parent="BTRoot/main/SetOffAlarm/BTSuccess/BTSequence"]
script = ExtResource("23_vvyob")

[node name="SetRunningToAlarm" type="Node" parent="BTRoot/main/SetOffAlarm/BTSuccess/BTSequence"]
script = ExtResource("17_1dgpv")

[node name="Attack" type="Node" parent="BTRoot/main"]
script = ExtResource("6_662v7")

[node name="IsAttack" type="Node" parent="BTRoot/main/Attack"]
script = ExtResource("6_662v7")

[node name="AddToBBoard" type="Node" parent="BTRoot/main/Attack/IsAttack"]
script = ExtResource("7_gb1p3")
key = "player_in_view_box"

[node name="SetActorAttackAnim" type="Node" parent="BTRoot/main/Attack/IsAttack"]
script = ExtResource("11_w1ce1")

[node name="CheckViewbox" type="Node" parent="BTRoot/main/Attack/IsAttack"]
script = ExtResource("8_ojp6s")

[node name="RaycastCheck" type="Node" parent="BTRoot/main/Attack/IsAttack"]
script = ExtResource("8_6eetk")

[node name="BTSelector" type="Node" parent="BTRoot/main/Attack/IsAttack"]
script = ExtResource("5_v2t6w")

[node name="BTInverter" type="Node" parent="BTRoot/main/Attack/IsAttack/BTSelector"]
script = ExtResource("20_n7e2q")

[node name="IsDesignatedToAlarm" type="Node" parent="BTRoot/main/Attack/IsAttack/BTSelector/BTInverter"]
script = ExtResource("11_wmtmj")

[node name="SetRunningToAlarm" type="Node" parent="BTRoot/main/Attack/IsAttack/BTSelector"]
script = ExtResource("17_1dgpv")
running_to_alarm = true

[node name="SetState" type="Node" parent="BTRoot/main/Attack"]
script = ExtResource("7_2j6yi")

[node name="MoveAndAttack" type="Node" parent="BTRoot/main/Attack"]
script = ExtResource("6_662v7")

[node name="Move" type="Node" parent="BTRoot/main/Attack/MoveAndAttack"]
script = ExtResource("6_662v7")

[node name="SetActorMoveSpeed" type="Node" parent="BTRoot/main/Attack/MoveAndAttack/Move"]
script = ExtResource("10_kmp4m")
is_run_speed = true

[node name="SetActorAttackAnim" type="Node" parent="BTRoot/main/Attack/MoveAndAttack/Move"]
script = ExtResource("11_w1ce1")
is_attacking = true

[node name="MoveToTarget" type="Node" parent="BTRoot/main/Attack/MoveAndAttack/Move"]
script = ExtResource("11_ehnue")

[node name="Attack" type="Node" parent="BTRoot/main/Attack/MoveAndAttack"]
script = ExtResource("6_662v7")

[node name="IsPlayerInRange" type="Node" parent="BTRoot/main/Attack/MoveAndAttack/Attack"]
script = ExtResource("7_fj5sb")
blackboard_key = "player_in_range"
expression = "actor.player_in_range"
can_overwrite_value = true

[node name="IsAttackCooldown" type="Node" parent="BTRoot/main/Attack/MoveAndAttack/Attack"]
script = ExtResource("19_3qyfc")

[node name="Attack" type="Node" parent="BTRoot/main/Attack/MoveAndAttack/Attack"]
script = ExtResource("9_yu6x7")

[node name="Alerted" type="Node" parent="BTRoot/main"]
script = ExtResource("6_662v7")

[node name="SetActorAlertAnimFalse" type="Node" parent="BTRoot/main/Alerted"]
script = ExtResource("20_skrji")

[node name="IsHearingSounds" type="Node" parent="BTRoot/main/Alerted"]
script = ExtResource("17_d2bvp")

[node name="SetActorAlertAnimTrue" type="Node" parent="BTRoot/main/Alerted"]
script = ExtResource("20_skrji")
is_moving = true

[node name="InvestigateSound" type="Node" parent="BTRoot/main/Alerted"]
script = ExtResource("6_662v7")

[node name="SetActorMoveSpeed" type="Node" parent="BTRoot/main/Alerted/InvestigateSound"]
script = ExtResource("10_kmp4m")

[node name="CheckTargetDist" type="Node" parent="BTRoot/main/Alerted/InvestigateSound"]
script = ExtResource("23_1dqts")

[node name="MoveToInvestigate" type="Node" parent="BTRoot/main/Alerted/InvestigateSound"]
script = ExtResource("16_a3i3y")

[node name="BTSelector" type="Node" parent="BTRoot/main"]
script = ExtResource("5_v2t6w")

[node name="BTSequence" type="Node" parent="BTRoot/main/BTSelector"]
script = ExtResource("6_662v7")

[node name="IsTurnCooldown" type="Node" parent="BTRoot/main/BTSelector/BTSequence"]
script = ExtResource("34_bqx1l")

[node name="TurnRandomly" type="Node" parent="BTRoot/main/BTSelector/BTSequence"]
script = ExtResource("35_1r4h7")

[node name="Idle" type="Node" parent="BTRoot/main/BTSelector"]
script = ExtResource("9_5l4jl")
wait_time_ms = 3

[node name="BTBlackboard" type="Node" parent="."]
script = ExtResource("14_s55ac")

[connection signal="body_entered" from="VisionBox" to="." method="_on_vision_box_body_entered"]
[connection signal="body_exited" from="VisionBox" to="." method="_on_vision_box_body_exited"]
[connection signal="body_entered" from="AttackBox" to="." method="_on_attack_box_body_entered"]
[connection signal="body_exited" from="AttackBox" to="." method="_on_attack_box_body_exited"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
